tests/constraints_ptr_fail.ppig

func main(): i32
{
    let mut val: i32|$ > 10 = 30;
    let mut ptr = &val;
    ptr = 3; //error
    return 0;
}
